--- a/portfolio-dungtengjie.html
+++ b/portfolio-dungtengjie.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>SY GROUP / 大隱</title>
+		<title>SY GROUP / 東騰介</title>
 		<link rel="icon" href="./image/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="./index.css" />
 
@@ -47,93 +47,123 @@
 		<div
 			class="project"
 			data-selected="true"
-			data-category="住宅空間,大隱"
+			data-category="公共設計,東騰介"
 			id="top">
-			<h2 class="project-name">大隱</h2>
-			<h3 class="project-type">住宅空間</h3>
+			<h2 class="project-name">東騰介</h2>
+			<h3 class="project-type">公共設計</h3>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6799.jpg"
+					src="./image/front cover/Portfolio-3/IMG_3053.JPG"
 					alt=""
 					onclick="openSwiper(0)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6883.jpg"
+					src="./image/front cover/Portfolio-3/IMG_3085.JPG"
 					alt=""
 					onclick="openSwiper(1)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6785.jpg"
+					src="./image/front cover/Portfolio-3/IMG_3124.JPG"
 					alt=""
 					onclick="openSwiper(2)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6802.jpg"
+					src="./image/front cover/Portfolio-3/IMG_3141.JPG"
 					alt=""
 					onclick="openSwiper(3)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6806.jpg"
+					src="./image/front cover/Portfolio-3/IMG_3147.JPG"
 					alt=""
 					onclick="openSwiper(4)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6810.jpg"
+					src="./image/front cover/Portfolio-3/IMG_3150.JPG"
 					alt=""
 					onclick="openSwiper(5)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6853.jpg"
+					src="./image/front cover/Portfolio-3/IMG_3159.JPG"
 					alt=""
 					onclick="openSwiper(6)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6795.jpg"
+					src="./image/front cover/Portfolio-3/IMG_3179F.jpg"
 					alt=""
 					onclick="openSwiper(7)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6875.jpg"
+					src="./image/front cover/Portfolio-3/IMG_3196.JPG"
 					alt=""
 					onclick="openSwiper(8)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6884.jpg"
+					src="./image/front cover/Portfolio-3/IMG_3203.JPG"
 					alt=""
 					onclick="openSwiper(9)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6856.jpg"
+					src="./image/front cover/Portfolio-3/IMG_3208.JPG"
 					alt=""
 					onclick="openSwiper(10)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6859.jpg"
+					src="./image/front cover/Portfolio-3/IMG_3211.JPG"
 					alt=""
 					onclick="openSwiper(11)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6860.jpg"
+					src="./image/front cover/Portfolio-3/IMG_3223.JPG"
 					alt=""
 					onclick="openSwiper(12)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6864.jpg"
+					src="./image/front cover/Portfolio-3/IMG_3227.JPG"
 					alt=""
 					onclick="openSwiper(13)" />
+			</div>
+			<div class="image-container">
+				<img
+					src="./image/front cover/Portfolio-3/IMG_3239.JPG"
+					alt=""
+					onclick="openSwiper(14)" />
+			</div>
+			<div class="image-container">
+				<img
+					src="./image/front cover/Portfolio-3/IMG_3247.JPG"
+					alt=""
+					onclick="openSwiper(15)" />
+			</div>
+			<div class="image-container">
+				<img
+					src="./image/front cover/Portfolio-3/IMG_3249.JPG"
+					alt=""
+					onclick="openSwiper(16)" />
+			</div>
+			<div class="image-container">
+				<img
+					src="./image/front cover/Portfolio-3/IMG_3253.JPG"
+					alt=""
+					onclick="openSwiper(17)" />
+			</div>
+			<div class="image-container">
+				<img
+					src="./image/front cover/Portfolio-3/IMG_3258.JPG"
+					alt=""
+					onclick="openSwiper(18)" />
 			</div>
 		</div>
 
@@ -142,94 +172,124 @@
 			<div class="swiper mySwiper2">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6799.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3053.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6883.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3085.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6785.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3124.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6802.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3141.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6806.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3147.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6810.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3150.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6853.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3159.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6795.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3179F.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6875.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3196.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6884.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3203.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6856.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3208.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6859.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3211.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6860.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3223.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6864.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3227.JPG" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-3/IMG_3239.JPG" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-3/IMG_3247.JPG" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-3/IMG_3249.JPG" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-3/IMG_3253.JPG" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-3/IMG_3258.JPG" />
 					</div>
 				</div>
-				<h2 class="swiper-portfolio-name">大隱</h2>
+				<h2 class="swiper-portfolio-name">東騰介</h2>
 			</div>
 			<div thumbsSlider="" class="swiper mySwiper">
 				<div class="swiper-pagination"></div>
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6799.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3053.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6883.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3085.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6785.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3124.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6802.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3141.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6806.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3147.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6810.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3150.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6853.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3159.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6795.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3179F.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6875.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3196.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6884.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3203.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6856.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3208.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6859.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3211.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6860.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3223.JPG" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6864.jpg" />
+						<img src="./image/front cover/Portfolio-3/IMG_3227.JPG" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-3/IMG_3239.JPG" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-3/IMG_3247.JPG" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-3/IMG_3249.JPG" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-3/IMG_3253.JPG" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-3/IMG_3258.JPG" />
 					</div>
 				</div>
 			</div>
@@ -281,7 +341,7 @@
 				</a>
 				<a
 					class="portfolio-size"
-					data-category="樣品屋"
+					data-category="住宅空間,西門綻"
 					data-aos="zoom-in-up"
 					href="/portfolio-1.html">
 					<img
@@ -295,7 +355,7 @@
 				</a>
 				<a
 					class="portfolio-size"
-					data-category="公共設計"
+					data-category="公共設計,東騰介"
 					data-aos="zoom-in-up"
 					href="/portfolio-1.html">
 					<img
@@ -309,7 +369,7 @@
 				</a>
 				<a
 					class="portfolio-size"
-					data-category="住宅空間"
+					data-category="住宅空間,國王雙子星"
 					data-aos="zoom-in-up"
 					data-aos-offset="30"
 					href="/portfolio-1.html">
