--- a/portfolio-king.html
+++ b/portfolio-king.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>SY GROUP / 大隱</title>
+		<title>SY GROUP / 國王雙子星</title>
 		<link rel="icon" href="./image/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="./index.css" />
 
@@ -47,93 +47,117 @@
 		<div
 			class="project"
 			data-selected="true"
-			data-category="住宅空間,大隱"
+			data-category="住宅空間,國王雙子星"
 			id="top">
-			<h2 class="project-name">大隱</h2>
+			<h2 class="project-name">國王雙子星</h2>
 			<h3 class="project-type">住宅空間</h3>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6799.jpg"
+					src="./image/front cover/Portfolio-4/2J7A7660.jpg"
 					alt=""
 					onclick="openSwiper(0)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6883.jpg"
+					src="./image/front cover/Portfolio-4/2J7A7668.jpg"
 					alt=""
 					onclick="openSwiper(1)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6785.jpg"
+					src="./image/front cover/Portfolio-4/2J7A7672.jpg"
 					alt=""
 					onclick="openSwiper(2)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6802.jpg"
+					src="./image/front cover/Portfolio-4/2J7A7680.jpg"
 					alt=""
 					onclick="openSwiper(3)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6806.jpg"
+					src="./image/front cover/Portfolio-4/2J7A7689.jpg"
 					alt=""
 					onclick="openSwiper(4)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6810.jpg"
+					src="./image/front cover/Portfolio-4/2J7A7699.jpg"
 					alt=""
 					onclick="openSwiper(5)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6853.jpg"
+					src="./image/front cover/Portfolio-4/2J7A7712.jpg"
 					alt=""
 					onclick="openSwiper(6)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6795.jpg"
+					src="./image/front cover/Portfolio-4/2J7A7714.jpg"
 					alt=""
 					onclick="openSwiper(7)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6875.jpg"
+					src="./image/front cover/Portfolio-4/2J7A7716.jpg"
 					alt=""
 					onclick="openSwiper(8)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6884.jpg"
+					src="./image/front cover/Portfolio-4/2J7A7737.jpg"
 					alt=""
 					onclick="openSwiper(9)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6856.jpg"
+					src="./image/front cover/Portfolio-4/2J7A7741.jpg"
 					alt=""
 					onclick="openSwiper(10)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6859.jpg"
+					src="./image/front cover/Portfolio-4/2J7A7742.jpg"
 					alt=""
 					onclick="openSwiper(11)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6860.jpg"
+					src="./image/front cover/Portfolio-4/2J7A7756.jpg"
 					alt=""
 					onclick="openSwiper(12)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6864.jpg"
+					src="./image/front cover/Portfolio-4/2J7A7776.jpg"
 					alt=""
 					onclick="openSwiper(13)" />
+			</div>
+			<div class="image-container">
+				<img
+					src="./image/front cover/Portfolio-4/2J7A7783.jpg"
+					alt=""
+					onclick="openSwiper(14)" />
+			</div>
+			<div class="image-container">
+				<img
+					src="./image/front cover/Portfolio-4/2J7A7785.jpg"
+					alt=""
+					onclick="openSwiper(15)" />
+			</div>
+			<div class="image-container">
+				<img
+					src="./image/front cover/Portfolio-4/2J7A7794.jpg"
+					alt=""
+					onclick="openSwiper(16)" />
+			</div>
+			<div class="image-container">
+				<img
+					src="./image/front cover/Portfolio-4/2J7A7807.jpg"
+					alt=""
+					onclick="openSwiper(17)" />
 			</div>
 		</div>
 
@@ -142,94 +166,118 @@
 			<div class="swiper mySwiper2">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6799.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7660.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6883.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7668.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6785.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7672.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6802.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7680.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6806.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7689.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6810.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7699.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6853.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7712.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6795.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7714.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6875.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7716.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6884.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7737.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6856.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7741.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6859.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7742.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6860.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7756.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6864.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7776.jpg" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-4/2J7A7783.jpg" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-4/2J7A7785.jpg" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-4/2J7A7794.jpg" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-4/2J7A7807.jpg" />
 					</div>
 				</div>
-				<h2 class="swiper-portfolio-name">大隱</h2>
+				<h2 class="swiper-portfolio-name">國王雙子星</h2>
 			</div>
 			<div thumbsSlider="" class="swiper mySwiper">
 				<div class="swiper-pagination"></div>
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6799.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7660.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6883.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7668.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6785.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7672.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6802.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7680.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6806.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7689.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6810.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7699.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6853.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7712.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6795.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7714.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6875.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7716.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6884.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7737.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6856.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7741.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6859.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7742.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6860.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7756.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6864.jpg" />
+						<img src="./image/front cover/Portfolio-4/2J7A7776.jpg" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-4/2J7A7783.jpg" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-4/2J7A7785.jpg" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-4/2J7A7794.jpg" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-4/2J7A7807.jpg" />
 					</div>
 				</div>
 			</div>
@@ -281,7 +329,7 @@
 				</a>
 				<a
 					class="portfolio-size"
-					data-category="樣品屋"
+					data-category="住宅空間,西門綻"
 					data-aos="zoom-in-up"
 					href="/portfolio-1.html">
 					<img
@@ -295,7 +343,7 @@
 				</a>
 				<a
 					class="portfolio-size"
-					data-category="公共設計"
+					data-category="公共設計,東騰介"
 					data-aos="zoom-in-up"
 					href="/portfolio-1.html">
 					<img
@@ -309,7 +357,7 @@
 				</a>
 				<a
 					class="portfolio-size"
-					data-category="住宅空間"
+					data-category="住宅空間,國王雙子星"
 					data-aos="zoom-in-up"
 					data-aos-offset="30"
 					href="/portfolio-1.html">
