--- a/portfolio-ximenzhan.html
+++ b/portfolio-ximenzhan.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>SY GROUP / 大隱</title>
+		<title>SY GROUP / 西門綻</title>
 		<link rel="icon" href="./image/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="./index.css" />
 
@@ -47,93 +47,105 @@
 		<div
 			class="project"
 			data-selected="true"
-			data-category="住宅空間,大隱"
+			data-category="住宅空間,西門綻"
 			id="top">
-			<h2 class="project-name">大隱</h2>
-			<h3 class="project-type">住宅空間</h3>
+			<h2 class="project-name">西門綻</h2>
+			<h3 class="project-type">樣品屋</h3>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6799.jpg"
+					src="./image/front cover/Portfolio-2/2J7A8398.jpg"
 					alt=""
 					onclick="openSwiper(0)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6883.jpg"
+					src="./image/front cover/Portfolio-2/2J7A8414.jpg"
 					alt=""
 					onclick="openSwiper(1)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6785.jpg"
+					src="./image/front cover/Portfolio-2/2J7A8418.jpg"
 					alt=""
 					onclick="openSwiper(2)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6802.jpg"
+					src="./image/front cover/Portfolio-2/2J7A8450.jpg"
 					alt=""
 					onclick="openSwiper(3)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6806.jpg"
+					src="./image/front cover/Portfolio-2/2J7A8464.jpg"
 					alt=""
 					onclick="openSwiper(4)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6810.jpg"
+					src="./image/front cover/Portfolio-2/2J7A8467.jpg"
 					alt=""
 					onclick="openSwiper(5)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6853.jpg"
+					src="./image/front cover/Portfolio-2/2J7A8477.jpg"
 					alt=""
 					onclick="openSwiper(6)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6795.jpg"
+					src="./image/front cover/Portfolio-2/2J7A8500.jpg"
 					alt=""
 					onclick="openSwiper(7)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6875.jpg"
+					src="./image/front cover/Portfolio-2/2J7A8504.jpg"
 					alt=""
 					onclick="openSwiper(8)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6884.jpg"
+					src="./image/front cover/Portfolio-2/2J7A8516.jpg"
 					alt=""
 					onclick="openSwiper(9)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6856.jpg"
+					src="./image/front cover/Portfolio-2/2J7A8559.jpg"
 					alt=""
 					onclick="openSwiper(10)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6859.jpg"
+					src="./image/front cover/Portfolio-2/2J7A8572.jpg"
 					alt=""
 					onclick="openSwiper(11)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6860.jpg"
+					src="./image/front cover/Portfolio-2/2J7A8580.jpg"
 					alt=""
 					onclick="openSwiper(12)" />
 			</div>
 			<div class="image-container">
 				<img
-					src="./image/front cover/Portfolio-1/2J7A6864.jpg"
+					src="./image/front cover/Portfolio-2/2J7A8636.jpg"
 					alt=""
 					onclick="openSwiper(13)" />
+			</div>
+			<div class="image-container">
+				<img
+					src="./image/front cover/Portfolio-2/2J7A8653.jpg"
+					alt=""
+					onclick="openSwiper(14)" />
+			</div>
+			<div class="image-container">
+				<img
+					src="./image/front cover/Portfolio-2/2J7A8667.jpg"
+					alt=""
+					onclick="openSwiper(15)" />
 			</div>
 		</div>
 
@@ -142,94 +154,106 @@
 			<div class="swiper mySwiper2">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6799.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8398.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6883.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8414.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6785.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8418.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6802.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8450.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6806.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8464.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6810.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8467.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6853.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8477.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6795.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8500.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6875.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8504.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6884.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8516.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6856.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8559.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6859.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8572.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6860.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8580.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6864.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8636.jpg" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-2/2J7A8653.jpg" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-2/2J7A8667.jpg" />
 					</div>
 				</div>
-				<h2 class="swiper-portfolio-name">大隱</h2>
+				<h2 class="swiper-portfolio-name">西門綻</h2>
 			</div>
 			<div thumbsSlider="" class="swiper mySwiper">
 				<div class="swiper-pagination"></div>
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6799.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8398.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6883.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8414.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6785.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8418.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6802.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8450.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6806.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8464.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6810.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8467.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6853.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8477.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6795.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8500.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6875.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8504.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6884.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8516.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6856.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8559.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6859.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8572.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6860.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8580.jpg" />
 					</div>
 					<div class="swiper-slide">
-						<img src="./image/front cover/Portfolio-1/2J7A6864.jpg" />
+						<img src="./image/front cover/Portfolio-2/2J7A8636.jpg" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-2/2J7A8653.jpg" />
+					</div>
+					<div class="swiper-slide">
+						<img src="./image/front cover/Portfolio-2/2J7A8667.jpg" />
 					</div>
 				</div>
 			</div>
@@ -281,7 +305,7 @@
 				</a>
 				<a
 					class="portfolio-size"
-					data-category="樣品屋"
+					data-category="住宅空間,西門綻"
 					data-aos="zoom-in-up"
 					href="/portfolio-1.html">
 					<img
@@ -295,7 +319,7 @@
 				</a>
 				<a
 					class="portfolio-size"
-					data-category="公共設計"
+					data-category="公共設計,東騰介"
 					data-aos="zoom-in-up"
 					href="/portfolio-1.html">
 					<img
@@ -309,7 +333,7 @@
 				</a>
 				<a
 					class="portfolio-size"
-					data-category="住宅空間"
+					data-category="住宅空間,國王雙子星"
 					data-aos="zoom-in-up"
 					data-aos-offset="30"
 					href="/portfolio-1.html">
@@ -510,10 +534,9 @@
 <script>
 	document.addEventListener("DOMContentLoaded", () => {
 		const header = document.querySelector(".style-filter");
-		const targetSection = document.querySelector("#design-project");
-		const mainHeader = document.querySelector("header"); // 主 header
+		const targetSection = document.querySelector(".design-project");
 
-		if (header && targetSection && mainHeader) {
+		if (header && targetSection) {
 			const styleFilterTop = header.offsetTop;
 			const headerHeight = header.getBoundingClientRect().height;
 
@@ -533,9 +556,6 @@
 
 			let debounceTimeout;
 
-			const getDocHeight = () => document.documentElement.scrollHeight;
-			const getWinHeight = () => window.innerHeight;
-
 			const updateStickyState = () => {
 				const currentTime = Date.now();
 				if (currentTime - lastToggleTime < minToggleInterval) {
@@ -544,23 +564,14 @@
 				}
 
 				const scrollY = lastKnownScrollY;
+
 				const targetSectionBottom =
 					targetSection.offsetTop + targetSection.offsetHeight;
-
-				const isAtBottom = scrollY + getWinHeight() >= getDocHeight() - 10;
 
 				const isNowWithinStickyRange =
 					scrollY > styleFilterTop - enterThreshold &&
 					scrollY < targetSectionBottom - headerHeight - exitThreshold;
 
-				// 當滾動到底部時，確保避讓 header
-				if (isAtBottom) {
-					header.classList.add("scrolled-up");
-				} else {
-					header.classList.remove("scrolled-up");
-				}
-
-				// 更新 sticky 狀態
 				if (isNowWithinStickyRange !== isWithinStickyRange) {
 					isWithinStickyRange = isNowWithinStickyRange;
 					if (!isWithinStickyRange) {
@@ -577,12 +588,19 @@
 					isSticky = false;
 				}
 
-				// 更新滾動方向
 				if (isWithinStickyRange) {
 					const isScrollingUp = scrollY < prevScrollY;
 					if (isScrollingUp !== isScrolledUp) {
 						isScrolledUp = isScrollingUp;
 						header.classList.toggle("scrolled-up", isScrolledUp);
+					}
+
+					// 檢查是否滾動到頁面底部
+					const scrolledToBottom =
+						window.innerHeight + window.scrollY >= document.body.offsetHeight;
+
+					if (scrolledToBottom && !header.classList.contains("scrolled-up")) {
+						header.classList.add("scrolled-up");
 					}
 				}
 
